@@ -13,29 +13,31 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package com.oracle.odi.cdi.processor;
+package com.oracle.odi.cdi.processor.mappers;
 
+import java.util.Collections;
 import java.util.List;
 
-import io.micronaut.context.annotation.Prototype;
+import io.micronaut.context.annotation.Bean;
 import io.micronaut.core.annotation.AnnotationValue;
-import io.micronaut.inject.annotation.TypedAnnotationTransformer;
+import io.micronaut.inject.annotation.TypedAnnotationMapper;
 import io.micronaut.inject.visitor.VisitorContext;
-import jakarta.enterprise.context.Dependent;
+import jakarta.enterprise.inject.Alternative;
 
 /**
- * Transforms {@link jakarta.enterprise.context.Dependent} to {@link io.micronaut.context.annotation.Bean}.
+ * Maps {@link jakarta.enterprise.inject.Alternative} annotation to {@link io.micronaut.context.annotation.Bean}.
  */
-public class DependentTransformer implements TypedAnnotationTransformer<Dependent> {
+public class AlternativeMapper implements TypedAnnotationMapper<Alternative> {
+
     @Override
-    public Class<Dependent> annotationType() {
-        return Dependent.class;
+    public Class<Alternative> annotationType() {
+        return Alternative.class;
     }
 
     @Override
-    public List<AnnotationValue<?>> transform(AnnotationValue<Dependent> annotation, VisitorContext visitorContext) {
-        return List.of(
-                AnnotationValue.builder(Prototype.class).build()
+    public List<AnnotationValue<?>> map(AnnotationValue<Alternative> annotation, VisitorContext visitorContext) {
+        return Collections.singletonList(
+                AnnotationValue.builder(Bean.class).build()
         );
     }
 }
